--- a/Raul/templates/Raul/home.html
+++ b/Raul/templates/Raul/home.html
@@ -407,6 +407,8 @@
         </div>
     </div>
 
+    <div class="filler"></div>
+
     <div class="horizontalScroll" id="shop">
         <div class ="featureProductsHeading" >
             featured products
@@ -491,101 +493,7 @@
         </div>
     </div>
 
-    <!-- <div class= "feature" id="feature">
-        
-        <div class="featureProductsHeading">
-        </div>
-        <div class="sectionFeature">
-            <div class="featureImages">
-                <div class="featureProducts" id="reveal1">
-                    <img src="{% static 'Raul/Images/7.jpg' %}" draggable="false" alt="Furniture Photo">
-                    <div class="reveal1">
-                        <img src="{% static 'Raul/Images/7.jpg' %}" draggable="false" alt="Furniture Photo">
-                    </div>
-                </div>
-                <div class="featureProducts" id="reveal1">
-                    <img src="{% static 'Raul/Images/11.jpg' %}" draggable="false" alt="Furniture Photo">
-                    <div class="reveal1">
-                        <img src="{% static 'Raul/Images/11.jpg' %}" draggable="false" alt="Furniture Photo">
-                    </div>
-                </div>
-                <div class="featureProducts" id="reveal1">
-                    <img src="{% static 'Raul/Images/2.jpg' %}" draggable="false" alt="Furniture Photo">
-                    <div class="reveal1">
-                        <img src="{% static 'Raul/Images/2.jpg' %}" draggable="false" alt="Furniture Photo">
-                    </div>
-                </div>
-            
-                <div class="featureProducts" id="reveal1">
-                    <img src="{% static 'Raul/Images/5.jpg' %}" draggable="false" alt="Furniture Photo">
-                    <div class="reveal1">
-                        <img src="{% static 'Raul/Images/5.jpg' %}" draggable="false" alt="Furniture Photo">
-                    </div>
-                </div>
-                <div class="featureProducts"id="reveal1">
-                    <img src="{% static 'Raul/Images/11.jpg' %}" draggable="false" alt="Furniture Photo">
-                    <div class="reveal1">
-                        <img src="{% static 'Raul/Images/11.jpg' %}" draggable="false" alt="Furniture Photo">
-                    </div>
-                </div>
-                <div class="featureProducts"id="reveal1">
-                    <img src="{% static 'Raul/Images/2.jpg' %}" draggable="false" alt="Furniture Photo">
-                    <div class="reveal1">
-                        <img src="{% static 'Raul/Images/2.jpg' %}" draggable="false" alt="Furniture Photo">
-                    </div>
-                </div>
-                <div class="featureProducts"id="reveal1">
-                    <img src="{% static 'Raul/Images/11.jpg' %}" draggable="false" alt="Furniture Photo">
-                    <div class="reveal1">
-                        <img src="{% static 'Raul/Images/11.jpg' %}" draggable="false" alt="Furniture Photo">
-                    </div>
-                </div>
-                <div class="featureProducts"id="reveal1">
-                    <img src="{% static 'Raul/Images/2.jpg' %}" draggable="false" alt="Furniture Photo">
-                    <div class="reveal1">
-                        <img src="{% static 'Raul/Images/2.jpg' %}" draggable="false" alt="Furniture Photo">
-                    </div>
-                </div>
-            </div>
-            <div class ="revealProducts">
-                <p>featured products</p>
-            </div>
-        </div>
-    </div> -->
-
-    <div class ="bannerSecond">
-        <div class="roundCircle">
-            <div class="productDisplay">
-                <img src="{%static 'Raul/Images/Raul Website/Photo May 20, 5 03 10 PM.jpg' %}">
-                <p>graffiti wall art</p>
-                <h6>$120.00</h6>
-            </div>
-        </div>
-
-        <div class="roundCircle2">
-            <div class="productDisplay">
-                <img src="{%static 'Raul/Images/Raul Website/Photo May 20, 5 03 10 PM.jpg' %}">
-                <p>confetti plate</p>
-                <h6>$120.00</h6>
-            </div>
-        </div>
-
-        <div class="roundCircle3">
-            <div class="productDisplay">
-                <img src="{%static 'Raul/Images/Raul Website/Photo May 20, 5 03 10 PM.jpg' %}">
-                <p>champagne glass</p>
-                <h6>$120.00</h6>
-            </div>
-        </div>
-
-        <div class="roundCircle4">
-            <div class="productDisplay">
-                <img src="{%static 'Raul/Images/Raul Website/Photo May 20, 5 03 10 PM.jpg' %}">
-                <p>hara podha</p>
-                <h6>$120.00</h6>
-            </div>
-        </div>
-    </div>
+    <div class="filler" id ="borderBottom"></div>
 
     <div class ="shopBanner">
         <figcaption> shop for the perfect setup</figcaption>    
@@ -728,12 +636,125 @@
             </div>
         </div>
     </div>
-      
-    <div class="bannerThird">
-        <div class = "textHover">
-            <div class = "textHeading"> shop this collection </div>
+
+    
+    <!-- <div class= "feature" id="feature">
+        
+        <div class="featureProductsHeading">
+        </div>
+        <div class="sectionFeature">
+            <div class="featureImages">
+                <div class="featureProducts" id="reveal1">
+                    <img src="{% static 'Raul/Images/7.jpg' %}" draggable="false" alt="Furniture Photo">
+                    <div class="reveal1">
+                        <img src="{% static 'Raul/Images/7.jpg' %}" draggable="false" alt="Furniture Photo">
+                    </div>
+                </div>
+                <div class="featureProducts" id="reveal1">
+                    <img src="{% static 'Raul/Images/11.jpg' %}" draggable="false" alt="Furniture Photo">
+                    <div class="reveal1">
+                        <img src="{% static 'Raul/Images/11.jpg' %}" draggable="false" alt="Furniture Photo">
+                    </div>
+                </div>
+                <div class="featureProducts" id="reveal1">
+                    <img src="{% static 'Raul/Images/2.jpg' %}" draggable="false" alt="Furniture Photo">
+                    <div class="reveal1">
+                        <img src="{% static 'Raul/Images/2.jpg' %}" draggable="false" alt="Furniture Photo">
+                    </div>
+                </div>
+            
+                <div class="featureProducts" id="reveal1">
+                    <img src="{% static 'Raul/Images/5.jpg' %}" draggable="false" alt="Furniture Photo">
+                    <div class="reveal1">
+                        <img src="{% static 'Raul/Images/5.jpg' %}" draggable="false" alt="Furniture Photo">
+                    </div>
+                </div>
+                <div class="featureProducts"id="reveal1">
+                    <img src="{% static 'Raul/Images/11.jpg' %}" draggable="false" alt="Furniture Photo">
+                    <div class="reveal1">
+                        <img src="{% static 'Raul/Images/11.jpg' %}" draggable="false" alt="Furniture Photo">
+                    </div>
+                </div>
+                <div class="featureProducts"id="reveal1">
+                    <img src="{% static 'Raul/Images/2.jpg' %}" draggable="false" alt="Furniture Photo">
+                    <div class="reveal1">
+                        <img src="{% static 'Raul/Images/2.jpg' %}" draggable="false" alt="Furniture Photo">
+                    </div>
+                </div>
+                <div class="featureProducts"id="reveal1">
+                    <img src="{% static 'Raul/Images/11.jpg' %}" draggable="false" alt="Furniture Photo">
+                    <div class="reveal1">
+                        <img src="{% static 'Raul/Images/11.jpg' %}" draggable="false" alt="Furniture Photo">
+                    </div>
+                </div>
+                <div class="featureProducts"id="reveal1">
+                    <img src="{% static 'Raul/Images/2.jpg' %}" draggable="false" alt="Furniture Photo">
+                    <div class="reveal1">
+                        <img src="{% static 'Raul/Images/2.jpg' %}" draggable="false" alt="Furniture Photo">
+                    </div>
+                </div>
+            </div>
+            <div class ="revealProducts">
+                <p>featured products</p>
+            </div>
+        </div>
+    </div> -->
+
+    <div class ="bannerSecond">
+        <div class="roundCircle">
+            <div class="productDisplay">
+                <img src="{%static 'Raul/Images/Raul Website/Photo May 20, 5 03 10 PM.jpg' %}">
+                <p>graffiti wall art</p>
+                <h6>$120.00</h6>
+            </div>
+        </div>
+
+        <div class="roundCircle2">
+            <div class="productDisplay">
+                <img src="{%static 'Raul/Images/Raul Website/Photo May 20, 5 03 10 PM.jpg' %}">
+                <p>confetti plate</p>
+                <h6>$120.00</h6>
+            </div>
+        </div>
+
+        <div class="roundCircle3">
+            <div class="productDisplay">
+                <img src="{%static 'Raul/Images/Raul Website/Photo May 20, 5 03 10 PM.jpg' %}">
+                <p>champagne glass</p>
+                <h6>$120.00</h6>
+            </div>
+        </div>
+
+        <div class="roundCircle4">
+            <div class="productDisplay">
+                <img src="{%static 'Raul/Images/Raul Website/Photo May 20, 5 03 10 PM.jpg' %}">
+                <p>hara podha</p>
+                <h6>$120.00</h6>
+            </div>
         </div>
     </div>
+
+    <div class="filler"></div>
+
+    <div class="bannerThird">
+        <div class = "section">
+            <div class="firstSection">
+                <div class = "textHover">
+                    <div class = "textHeading"> shop this collection </div>
+                </div>
+            </div>
+            <div></div>
+            <div class="secondSection">
+                <div class = "textHover">
+                    <div class = "textHeading"> shop this collection </div>
+                </div>
+            </div>
+        </div>
+        
+    </div>
+
+    <div class="filler"></div> 
+
 
     <!-- <div class="collectionBanner">
         <figcaption>shop this collection</figcaption>
