--- a/Raul/templates/Raul/single_product.html
+++ b/Raul/templates/Raul/single_product.html
@@ -74,10 +74,8 @@
             font-size: 22px;
             font-weight: 300;
             line-height: 24px;
-            
-            background: -webkit-linear-gradient(#f8f18e,#d6a55b);
-            -webkit-background-clip: text;
-            -webkit-text-fill-color: transparent;
+            color:white;
+            font-weight: 300;
         }
 
         .product-configuration form{
