--- a/Raul/templates/Raul/home.html
+++ b/Raul/templates/Raul/home.html
@@ -407,6 +407,7 @@
         </div>
     </div>
 
+    <div class="filler" id ="borderBottom"></div>
     <div class="filler"></div>
 
     <div class="horizontalScroll" id="shop">
