--- a/Raul/templates/Raul/single_product.html
+++ b/Raul/templates/Raul/single_product.html
@@ -182,7 +182,10 @@
 
         .cartAdded{
             font-size: 25px;
-            font-weight: 200;
+            background: -webkit-linear-gradient(#f8f18e,#d6a55b);
+	-webkit-background-clip: text;
+	-webkit-text-fill-color: transparent;
+            font-weight: 500;
         }
 
         @keyframes fadeInPop{
