--- a/Raul/templates/Raul/home.html
+++ b/Raul/templates/Raul/home.html
@@ -220,6 +220,7 @@
     </div>
 
 
+
     <div class ="bannerHead" id = "mainBanner">
         <video src="{% static 'Raul/Images/Raul_Movie.mp4' %}" autoplay loop muted id = "videoBG"></video>
         <div class = "bannerHeading">
@@ -408,12 +409,15 @@
     </div>
 
     <div class="filler" id ="borderBottom"></div>
-    <div class="filler"></div>
+ 
+
 
     <div class="horizontalScroll" id="shop">
         <div class ="featureProductsHeading" >
+
             featured products
         </div>
+        <div class="filler"></div>
         <div class="marquee">
             <ul class="marqueeContent">
                 <li>
@@ -434,7 +438,7 @@
                 </li>
                 <li>
                     <div class = "container" data-aos="fade-in">
-                        <img src="{%static 'Raul/Images/Test2.png'%}" draggable="false" alt="Furniture Photo" class="imageAvatar">
+                        <img src="{%static 'Raul/Images/small.jpg'%}" draggable="false" alt="Furniture Photo" class="imageAvatar">
                         <div class = "text">
                             <div class = "textInfo"> DINNERWARE </div>
                         </div>
@@ -442,7 +446,7 @@
                 </li>
                 <li>
                     <div class = "container" data-aos="fade-in">
-                        <img src="{%static 'Raul/Images/Test3.png'%}" draggable="false" alt="Furniture Photo" class="imageAvatar">
+                        <img src="{%static 'Raul/Images/small2.jpg'%}" draggable="false" alt="Furniture Photo" class="imageAvatar">
                         <div class = "text">
                             <div class = "textInfo"> FLORAL ARRANGEMENTS </div>
                         </div>
@@ -450,7 +454,7 @@
                 </li>
                 <li>
                     <div class = "container" data-aos="fade-in">
-                        <img src="{% static 'Raul/Images/test_pic.png' %}" draggable="false" alt="Furniture Photo" class="imageAvatar">
+                        <img src="{% static 'Raul/Images/small3.jpg' %}" draggable="false" alt="Furniture Photo" class="imageAvatar">
                         <div class = "text">
                             <div class = "textInfo"> DINNERWARE </div>
                         </div>
@@ -458,7 +462,7 @@
                 </li>
                 <li>
                     <div class = "container" data-aos="fade-in">
-                        <img src="{% static 'Raul/Images/Test.png' %}" draggable="false" alt="Furniture Photo" class="imageAvatar">
+                        <img src="{% static 'Raul/Images/small.jpg' %}" draggable="false" alt="Furniture Photo" class="imageAvatar">
                         <div class = "text">
                             <div class = "textInfo"> WALL ART </div>
                         </div>
@@ -466,7 +470,7 @@
                 </li>
                 <li>
                     <div class = "container" data-aos="fade-in">
-                        <img src="{% static 'Raul/Images/LexiPotSmall_25c065c4-8d9b-4760-8570-7c1bfd73b597_2048x-removebg-preview.png' %}" draggable="false" alt="Furniture Photo" class="imageAvatar">
+                        <img src="{% static 'Raul/Images/small.jpg' %}" draggable="false" alt="Furniture Photo" class="imageAvatar">
                         <div class = "text">
                             <div class = "textInfo"> chandelier </div>
                         </div>
@@ -474,7 +478,7 @@
                 </li>
                 <li>
                     <div class = "container" data-aos="fade-in">
-                        <img src="{% static 'Raul/Images/Test.png' %}" draggable="false" alt="Furniture Photo" class="imageAvatar">
+                        <img src="{% static 'Raul/Images/small2.jpg' %}" draggable="false" alt="Furniture Photo" class="imageAvatar">
                         <div class = "text">
                             <div class = "textInfo"> WAll ART </div>
                         </div>
@@ -483,7 +487,7 @@
 
                 <li>
                     <div class = "container" data-aos="fade-in">
-                        <img src="{% static 'Raul/Images/Test2.png' %}" draggable="false" alt="Furniture Photo" class="imageAvatar">
+                        <img src="{% static 'Raul/Images/small3.jpg' %}" draggable="false" alt="Furniture Photo" class="imageAvatar">
                         <div class = "text">
                             <div class = "textInfo"> dinnerware </div>
                         </div>
@@ -493,7 +497,7 @@
             </ul>
         </div>
     </div>
-
+    <div class="filler"></div>
     <div class="filler" id ="borderBottom"></div>
 
     <div class ="shopBanner">
