--- a/Raul/templates/Raul/base.html
+++ b/Raul/templates/Raul/base.html
@@ -1,16 +1,19 @@
-{% load static %}
 <!DOCTYPE html>
+{% load static %}
+{% load crispy_forms_tags %}
+
 <html lang="en">
 <head>
 
-    <!-- Header Nav Bar-->
-    <title>Raul Retail</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type = "text/css" href="{% static 'Raul/CSS/main.css' %}">
+    <title>
+        Raul Retail
+    </title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" type="text/css" href="{% static 'Raul/CSS/main.css' %}">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
-    <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@700&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
 
 
     <!-- Favicons -->
@@ -33,130 +36,191 @@
     <meta name="theme-color" content="#ffffff">
 
 </head>
-
 <body>
 
-    <div class = "headers" id="headerOnScroll" style="background-color: #6d6d6d;">
-        <figure id="figureOnScroll">
+<div id="id01" class="modal">
 
-            <div class="navbarIcons">
-                <p><img src="{% static 'Raul/Icons/Icons_Small/phone.png' %}" alt="Contact Us"></p>
-                <div class="hoverDiv2">
-                    <span style="letter-spacing: 2px;">CONTACT US</span><br><br><br>
-                    <img src="{% static 'Raul/Icons/Icons_Small/email.png' %}"> <span>email@email.com</span><br><br>
-                    <img src="{% static 'Raul/Icons/Icons_Small/phone.png' %}" id="phoneContact"> <span> (900)-009-9090</span>
-                </div>
+    <form class="modal-content animate" action="" method="POST">
+        <div class="imgcontainer">
+            <p> SIGN IN</p>
+            <span onclick="document.getElementById('id01').style.display='none'" class="close" title="Close Login Pop-up">&times;</span>
+        </div>
+        <div>
+            <div class="centerIt">
+                {%csrf_token%}
+                {{form.as_p}}
+                <button value="Login" name="login" type="submit">Login</button>
             </div>
-
-            <div class="navbarIcons">
-                <p><img src="{% static 'Raul/Icons/Icons_Small/location.png' %}" alt="Location"></p>
-                <div class="hoverDiv3">
-                    <span style="letter-spacing: 2px;">VISIT US</span><br><br><br>
-                    <span>216 8th Avenue, <br>New York, NY 10011</span><br><br>
-                    <span>Seven Days a Week</span><br><br>
-                    <span>9:00AM - 8:00PM</span>
-                </div>
-            </div>
-
-            <img src="{% static 'Raul/Images/raullogo.png' %}" alt="Raul Logo" width="6%"  onclick="openStore()" id="logo">
-
-            {% if user.is_authenticated %}
-            <a href="{% url 'Raul-SecondHome' %}"><p> <img src="{% static 'Raul/Icons/Icons_Small/home.png' %}" alt="Home"> </p></a>
-            <div class="navbarIcons">
-                <p><img src="{% static 'Raul/Icons/Icons_Small/login.png' %}" alt="Login"></p>
-                <div class="hoverDiv">
-                    <span><a href="{% url 'profile' %}">Profile</a></span><br><br>
-                    <span><a href="{% url 'logout' %}"> <p> Logout </p></a></span>
-                </div>
-            </div>
-            <a href="{% url 'cart' %}"> <p> <img src="{% static 'Raul/Icons/Icons_Small/cart.png' %}" alt="Shopping Cart"> </p></a>
-
-            {% else %}
-            <a href="{% url 'Raul-SecondHome' %}"><p> <img src="{% static 'Raul/Icons/Icons_Small/home.png' %}" alt="Home"> </p></a>
-            <div class="navbarIcons">
-                <p><img src="{% static 'Raul/Icons/Icons_Small/login.png' %}" alt="Login"></p>
-                <div class="hoverDiv">
-                    <span><a href="{% url 'login' %}">Login</a></span><br><br>
-                    <span><a href="{% url 'register' %}">Register</a></span>
-                </div>
-            </div>
-            <a href="{% url 'cart' %}"> <p><img src="{% static 'Raul/Icons/Icons_Small/cart.png' %}" alt="Cart"> </p></a>
-            {% endif %}
-
-        </figure>
-
-        <div class="category" id="hideOnScroll" style="background-color: #6d6d6d;">
-            <p id="categoryP"><a style="color: white" href="{% url 'sec-view' 'New Arrivals' %}">New Arrivals</a></p>
-
-            <p id="categoryP"><a style="color: white" href="{% url 'sec-view' 'Decorative Accessories' %}">Decorative Accessories</a></p>
-
-            <p id="categoryP"><a style="color: white" href="{% url 'sec-view' 'Tabletop' %}">Tabletop</a></p>
-
-            <p id="categoryP"><a style="color: white" href="{% url 'sec-view' 'Furniture' %}">Furniture</a></p>
-
-            <p id="categoryP"><a style="color: white" href="{% url 'sec-view' 'Floral' %}">Floral</a></p>
-
-            <p id="categoryP"><a style="color: white" href="{% url 'sec-view' 'Wall Art' %}">Wall Art</a></p>
-
-            <p id="categoryP"><a style="color: white" href="{% url 'Raul-product' %}">All Products</a></p>
-
-            <p id="categoryP"><a style="color: white" href="{% url 'sec-view' 'Sale' %}">Sale</a></p>
-
-            <p id="categoryP" style="color:white;">Venue Bookings</p>
-
         </div>
 
-        <figcaption><img src="{% static 'Raul/Images/raullogo.png' %}" alt="logo" width="6%" id="logo"></figcaption>
+        <div class="centerIt" id="links">
+            <!-- <small class="text-muted ml-2">
+                <a href="{% url 'password_reset' %}">Forgot Password?</a>
+            </small> -->
+            <span class="psw"><a href="{% url 'password_reset' %}">Forgot password?</a></span>
+            <span class="psw" id ="accountCreate"><a href="{% url 'register' %}">Create an Account</a></span>
+        </div>
+    </form>
+</div>
 
-        <nav>
-            <img src= "{% static 'Raul/Images/hamburgerIcon.png' %}" class="menuBar" id="menuHam" onclick="openNav()" draggable="false">
-            <ul id="contentHam">
+<div id="id02" class="modal2">
 
-                <li class="exitButton">
-                    <img src="{% static 'Raul/CSS/exit.svg' %}" id="exitButton" onclick="closeNav()" draggable="false">
-                </li>
-                <li>
-                    <a href="#">Home</a>
-                </li>
-                <li>
-                    <a href="#">Store</a>
-                </li>
-                <li>
-                    <a href="{% url 'register' %}">Register</a>
-                </li>
-                <li>
-                    <a href="{% url 'register' %}">Login</a>
-                </li>
-                <li>
-                    <a href="{% url 'cart' %}">Cart</a>
-                </li>
+    <form class="modal-content animate" action="" method="POST">
+        <div class="imgcontainer">
+            <p> create an account</p>
+            <span onclick="document.getElementById('id02').style.display='none'" class="close" title="Close Login Pop-up">&times;</span>
+        </div>
+        <div>
+            <div class="centerIt" >
+                {%csrf_token%}
+                {{ Register_form.as_table }}
+                <input type="submit" name="register" value="Register" class="button">
+            </div>
+        </div>
 
+        <div class="centerIt">
+            <span class="psw"><a href="#">Forgot password?</a></span>
+            <span class="psw" id ="accountCreate2"><a href="#">Create an Account</a></span>
+        </div>
+    </form>
+</div>
 
-            </ul>
-        </nav>
+<div class = "headers" id="headerOnScroll">
+    <figure id="figureOnScroll">
+
+        <div class="navbarIcons">
+            <p><img src="{% static 'Raul/Icons/Icons_Small/phone.png' %}" alt="Contact Us"></p>
+            <div class="hoverDiv2">
+                <span style="letter-spacing: 2px;">CONTACT US</span><br><br><br>
+                <img src="{% static 'Raul/Icons/Icons_Small/email.png' %}"> <span>email@email.com</span><br><br>
+                <img src="{% static 'Raul/Icons/Icons_Small/phone.png' %}" id="phoneContact"> <span> (900)-009-9090</span>
+            </div>
+        </div>
+
+        <div class="navbarIcons">
+            <p><img src="{% static 'Raul/Icons/Icons_Small/location.png' %}" alt="Location"></p>
+            <div class="hoverDiv3">
+                <span style="letter-spacing: 2px;">VISIT US</span><br><br><br>
+                <span>216 8th Avenue, <br>New York, NY 10011</span><br><br>
+                <span>Seven Days a Week</span><br><br>
+                <span>9:00AM - 8:00PM</span>
+            </div>
+        </div>
+
+        <img src="{% static 'Raul/Images/raullogo.png' %}" alt="Raul Logo" width="6%"  onclick="openStore()" id="logo">
+
+        {% if user.is_authenticated %}
+        <a href="{% url 'Raul-SecondHome' %}"><p> <img src="{% static 'Raul/Icons/Icons_Small/home.png' %}" alt="Home"> </p></a>
+        <div class="navbarIcons">
+            <p><img src="{% static 'Raul/Icons/Icons_Small/login.png' %}" alt="Login"></p>
+            <div class="hoverDiv">
+                <span><a href="{% url 'profile' %}">Profile</a></span><br><br>
+                <span><a href="{% url 'logout' %}"> <p> Logout </p></a></span>
+            </div>
+        </div>
+        <a href="{% url 'cart' %}" title="Shopping Cart"> <p> <img src="{% static 'Raul/Icons/Icons_Small/cart.png' %}" alt="Shopping Cart" > </p></a>
+
+        {% else %}
+        <a href="{% url 'Raul-SecondHome' %}"><p> <img src="{% static 'Raul/Icons/Icons_Small/home.png' %}" alt="Home"> </p></a>
+        <div class="navbarIcons">
+            <p title="Login or Register"><img src="{% static 'Raul/Icons/Icons_Small/login.png' %}" alt="Login"></p>
+            <div class="hoverDiv" title="Login or Register">
+                <span><a href="#" onclick="document.getElementById('id01').style.display='block'">Login</a></span><br><br>
+                <span><a href="#" onclick="document.getElementById('id02').style.display='block'">Register</a></span>
+            </div>
+        </div>
+        <a href="{% url 'cart' %}" title="Shopping Cart"> <p><img src="{% static 'Raul/Icons/Icons_Small/cart.png' %}" alt="Cart"> </p></a>
+        {% endif %}
+
+    </figure>
+
+    <div class="category" id="hideOnScroll">
+
+        <p id="categoryP"><a style="color: white" href="{% url 'sec-view' 'New Arrivals' %}">New Arrivals</a></p>
+
+        <p id="categoryP"><a style="color: white" href="{% url 'sec-view' 'Decorative Accessories' %}">Decorative Accessories</a></p>
+
+        <p id="categoryP"><a style="color: white" href="{% url 'sec-view' 'Tabletop' %}">Tabletop</a></p>
+
+        <p id="categoryP"><a style="color: white" href="{% url 'sec-view' 'Furniture' %}">Furniture</a></p>
+
+        <p id="categoryP"><a style="color: white" href="{% url 'sec-view' 'Floral' %}">Floral</a></p>
+
+        <p id="categoryP"><a style="color: white" href="{% url 'sec-view' 'Wall Art' %}">Wall Art</a></p>
+
+        <p id="categoryP"><a style="color: white" href="{% url 'Raul-product' %}">All Products</a></p>
+
+        <p id="categoryP"><a style="color: white" href="{% url 'sec-view' 'Sale' %}">Sale</a></p>
+
+        <p id="categoryP" style="color:white;">Venue Bookings</p>
 
     </div>
 
-    <div id ="store">
-        <p onclick="closeStore()" id="cross">
-            X
-        </p>
+    <figcaption><img src="{% static 'Raul/Images/raullogo.png' %}" alt="logo" width="6%" id="logo"></figcaption>
 
-        <p>
-            cafe flor
-        </p>
+    <nav>
+        <img src= "{% static 'Raul/Images/hamburgerIcon.png' %}" class="menuBar" id="menuHam" onclick="openNav()" draggable="false">
+        <ul id="contentHam">
 
-        <p>
-            raul
-        </p>
+            <li class="exitButton">
+                <img src="{% static 'Raul/CSS/exit.svg' %}" id="exitButton" onclick="closeNav()" draggable="false">
+            </li>
+            <li>
+                <a href="#">Home</a>
+            </li>
+            <li>
+                <a href="#">Store</a>
+            </li>
+            <li>
+                <a href="{% url 'register' %}">Register</a>
+            </li>
+            <li>
+                <a href="{% url 'register' %}">Login</a>
+            </li>
+            <li>
+                <a href="{% url 'cart' %}">Cart</a>
+            </li>
 
-        <p>
-            third
-        </p>
 
+        </ul>
+    </nav>
+
+</div>
+
+<div id ="store">
+    <p onclick="closeStore()" id="cross">
+        X
+    </p>
+
+    <p>
+        cafe flor
+    </p>
+
+    <p>
+        raul
+    </p>
+
+    <p>
+        third
+    </p>
+
+</div>
+<div>
+    {% if messages %}
+    <div class="popUpMessage">
+        <div class="messageRegister">
+            {% for message in messages %}
+            <div class="alert alert-{{ message.tags }}">
+                {{ message }}
+            </div>
+        </div>
     </div>
+    {% endfor %}
+    {% endif %}
+</div>
 
-    <div class="containers">
+
+<div class="containers">
         <div class = "containers1">
             {% block content %}{% endblock %}
         </div>
