--- a/Raul/templates/Raul/home.html
+++ b/Raul/templates/Raul/home.html
@@ -231,91 +231,16 @@
         <div class ="featureProductsHeading" >
             featured products
         </div>
-        <div class="marquee">
-            <ul class="marqueeContent">
-                <li>
-                    <div class = "container" data-aos="fade-in">
-                        <img src="{% static 'Raul/Images/LexiPotSmall_25c065c4-8d9b-4760-8570-7c1bfd73b597_2048x-removebg-preview.png' %}" draggable="false" alt="Furniture Photo" class="imageAvatar">
-                        <div class = "text">
-                            <div class = "textInfo"> Art </div>
-                        </div>
-                    </div>
-                </li>
-                <li>
-                    <div class = "container" data-aos="fade-in">
-                        <img src= "{%static 'Raul/Images/small.jpg'%}" draggable="false" alt="Furniture Photo" class="imageAvatar">
-                        <div class = "text">
-                            <div class = "textInfo"> wall art </div>
-                        </div>
-                    </div>
-                </li>
-                <li>
-                    <div class = "container" data-aos="fade-in">
-                        <img src= "{%static 'Raul/Images/small2.jpg'%}" draggable="false" alt="Furniture Photo" class="imageAvatar">
-                        <div class = "text">
-                            <div class = "textInfo"> DINNERWARE </div>
-                        </div>
-                    </div>
-                </li>
-                <li>
-                    <div class = "container" data-aos="fade-in">
-                        <img src="{%static 'Raul/Images/small.jpg'%}" draggable="false" alt="Furniture Photo" class="imageAvatar">
-                        <div class = "text">
-                            <div class = "textInfo"> FLORAL ARRANGEMENTS </div>
-                        </div>
-                    </div>
-                </li>
-                <li>
-                    <div class = "container" data-aos="fade-in">
-                        <img src="{% static 'Raul/Images/test_pic.png' %}" draggable="false" alt="Furniture Photo" class="imageAvatar">
-                        <div class = "text">
-                            <div class = "textInfo"> DINNERWARE </div>
-                        </div>
-                    </div>
-                </li>
-                <li>
-                    <div class = "container" data-aos="fade-in">
-                        <img src="{% static 'Raul/Images/Test.png' %}" draggable="false" alt="Furniture Photo" class="imageAvatar">
-                        <div class = "text">
-                            <div class = "textInfo"> WALL ART </div>
-                        </div>
-                    </div>
-                </li>
-                <li>
-                    <div class = "container" data-aos="fade-in">
-                        <img src="{% static 'Raul/Images/Test2.png' %}" draggable="false" alt="Furniture Photo" class="imageAvatar">
-                        <div class = "text">
-                            <div class = "textInfo"> chandelier </div>
-                        </div>
-                    </div>
-                </li>
-                <li>
-                    <div class = "container" data-aos="fade-in">
-                        <img src="{%static 'Raul/Images/small2.jpg'%}" draggable="false" alt="Furniture Photo" class="imageAvatar">
-                        <div class = "text">
-                            <div class = "textInfo"> WAll ART </div>
-                        </div>
-                    </div>
-                </li>
-
-                <li>
-                    <div class = "container" data-aos="fade-in">
-                        <img src="{%static 'Raul/Images/small2.jpg'%}" draggable="false" alt="Furniture Photo" class="imageAvatar">
-                        <div class = "text">
-                            <div class = "textInfo"> dinnerware </div>
-                        </div>
-                    </div>
-                </li>
-                <li>
-                    <div class = "container" data-aos="fade-in">
-                        <img src="{%static 'Raul/Images/small2.jpg'%}" draggable="false" alt="Furniture Photo" class="imageAvatar">
-                        <div class = "text">
-                            <div class = "textInfo"> yo </div>
-                        </div>
-                    </div>
-                </li>
-
-            </ul>
+        <div class="mobileGrid">
+            <img src="{% static 'Raul/Images/furniture.jpg' %}" draggable="false" alt="Furniture Photo" class="imageAvatar">
+            <img src="{% static 'Raul/Images/furniture2.jpg' %}" draggable="false" alt="Furniture Photo" class="imageAvatar">
+            <img src="{% static 'Raul/Images/furniture3.jpg' %}" draggable="false" alt="Furniture Photo" class="imageAvatar">
+            <img src="{% static 'Raul/Images/furniture4.jpg' %}" draggable="false" alt="Furniture Photo" class="imageAvatar">
+            <img src="{% static 'Raul/Images/furniture.jpg' %}" draggable="false" alt="Furniture Photo" class="imageAvatar">
+            <img src="{% static 'Raul/Images/furniture2.jpg' %}" draggable="false" alt="Furniture Photo" class="imageAvatar">
+            <img src="{% static 'Raul/Images/furniture3.jpg' %}" draggable="false" alt="Furniture Photo" class="imageAvatar">
+            <img src="{% static 'Raul/Images/furniture4.jpg' %}" draggable="false" alt="Furniture Photo" class="imageAvatar">
+           
         </div>
     </div>
 
