--- a/Raul/static/Raul/CSS/main.css
+++ b/Raul/static/Raul/CSS/main.css
@@ -2460,7 +2460,7 @@ nav ul li a:hover{
     }
 
     .section .firstSection{
-        background:url('Images/bannerSecond.jpg');
+        background:url('Images/V1D_2.jpg');
         width:100%;
         height: 100%;
         background-position: center bottom;
@@ -2468,7 +2468,7 @@ nav ul li a:hover{
     }
 
     .section .secondSection{
-        background: url('Images/bannerThird.jpg');
+        background: url('Images/V1D_2.jpg');
         width:100%;
         background-position: center;
         height: 100%;
@@ -3910,7 +3910,7 @@ nav ul li a:hover{
     }
 
     .section .firstSection{
-        background:url('Images/bannerSecond.jpg');
+        background:url('Images/V1D_2.jpg');
         width:100%;
         height: 100%;
         background-position: center bottom;
@@ -3918,7 +3918,7 @@ nav ul li a:hover{
     }
 
     .section .secondSection{
-        background: url('Images/bannerThird.jpg');
+        background: url('Images/V2D.jpg');
         width:100%;
         background-position: center;
         height: 100%;
