--- a/Raul/templates/Raul/product.html
+++ b/Raul/templates/Raul/product.html
@@ -1,11 +1,10 @@
+<!DOCTYPE html>
+{% load static %}
 {% extends "Raul/base.html" %}
 {% block content %}
-
-{% load static %}
-<!DOCTYPE html>
 <html>
 <head>
-    <title>Bootstrap Product Grid</title>
+    <title>Products</title>
     <!-- Bootstrap css -->
     <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous"></head> -->
 
