--- a/Raul_Inc/templates/Raul_Inc/home.html
+++ b/Raul_Inc/templates/Raul_Inc/home.html
@@ -1,11 +1,91 @@
 <!DOCTYPE html>
-<html lang="en">
+{% load static %}
+<html lang="en-US">
 <head>
-    <meta charset="UTF-8">
-    <title>Hi</title>
-    <h1>Hello</h1>
+    <title>Raúl Àvila Inc.</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <link rel="stylesheet" type="text/css" href="{% static 'Raul_Inc/CSS/main.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'Raul_Inc/CSS/homepage.css' %}">
+    <style>
+        .fullscreen-bg {
+            position: fixed;
+            top: 80px;
+            right: 0;
+            bottom: 0;
+            left: 0;
+            overflow: hidden;
+            z-index: -100;
+        }
+
+        .fullscreen-bg__video {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+        }
+        /*
+        @media (min-aspect-ratio: 16/9) {
+          .fullscreen-bg__video {
+            height: 300%;
+            top: -100%;
+          }
+        }
+
+        @media (max-aspect-ratio: 16/9) {
+          .fullscreen-bg__video {
+            width: 300%;
+            left: -100%;
+          }
+        }
+        */
+        @media (max-width: 767px) {
+            .fullscreen-bg {
+                background: url("{%static 'Raul/Images/Timelapse_MetGala2019_Sqaure.m4v' %}") center center / cover no-repeat;
+            }
+
+            .fullscreen-bg__video {
+                display: none;
+            }
+        }
+    </style>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js" ></script>
+    <script type="text/javascript" src="{% static 'Raul_Inc/JS/jquery.cycle.js' %}" ></script>
+    <script type="text/javascript" src="{% static 'Raul_Inc/JS/jquery.maximage.js' %}" charset="utf-8"></script>
+    <script type="text/javascript" src="{% static 'Raul_Inc/JS/homepage.js' %}" ></script>
+    <link rel="stylesheet" type="text/css" href="{% static 'Raul_Inc/CSS/main.css' %}">
 </head>
 <body>
+
+<link rel="stylesheet" type="text/css" href="{% static 'Raul_Inc/CSS/font-awesome.min.css' %}">
+
+<div id="navcontainer" class="fixed">
+    <div id="logo" class="home-logo"><img src="{%static 'Raul_Inc/Images/RaulAvilaInc.png' %}"/></div>
+    <ul id="navlist">
+        <li><a href="site.html">HOME</a></li>
+        <li><a href="bio.html">BIO</a></li>
+        <li><a href="press.html">PRESS</a></li>
+        <li><a href="clientlist.html">CLIENT LIST</a></li>
+        <li><a href="client/gallery.html">GALLERY</a></li>
+        <li><a href="contact.html">CONTACT</a></li>
+        <li>
+            <div id="social">
+                <a href="https://www.facebook.com/RAULAVILAINC" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+                <a href="https://twitter.com/RaulAvilaInc" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+                <a href="http://instagram.com/raulavilainc" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+            </div>
+        </li>
+    </ul>
+</div>
+
+<div class="fullscreen-bg">
+    <video loop muted autoplay poster="{%static 'Raul_Inc/Images/poster.png' %}" class="fullscreen-bg__video">
+        <source src="{%static 'Raul_Inc/Images/Timelapse_MetGala2019_Square.m4v' %}">
+
+    </video>
+</div>
+
+<script type="text/javascript" src="{% static 'Raul_Inc/JS/main.js' %}" ></script>
 
 </body>
 </html>
