--- a/Raul/templates/Raul/categories.html
+++ b/Raul/templates/Raul/categories.html
@@ -29,6 +29,11 @@
 
     <div class="row" id="scrollHere">
         {% for product in cat_products %}
+        <form method='POST' action="{% url 'ajax_add_to_cart' product.slug %}">
+            {% csrf_token %}
+
+            <input type="hidden" name='qty' type='number' placeholder='Quantity' class = "numberOfItems" min="1" max="50" value="1">
+
             <div class="productCard">
             <div class="image">
                 <a href="{% url 'Raul-single' product.slug %}" >
@@ -36,13 +41,14 @@
                 </a>
                 <div class="overlay">
                     <div class="actions">
-                        <p>Add to Cart</p>
+                        <input type='submit' value='Add to cart' onclick="cartNotification()">
                     </div>
                 </div>
             </div>
             <h5 class="productTitle">{{product.title}}</h5>
             <h5 class="productPrice">${{product.price}}</h5>
         </div>
+            </form>
         {% endfor %}
     </div>
 
@@ -56,6 +62,17 @@
 <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
 <script>
     AOS.init();
+</script>
+<script type="text/javascript">
+    $(window).load(function(){
+        if ($('#refreshed').val() == "false") {
+            $('#refreshed').val("true");
+        }
+        else {
+            $('#refreshed').val("false");
+            location.reload();
+        }
+    });
 </script>
 </body>
 
