--- a/Raul/templates/Raul/cart.html
+++ b/Raul/templates/Raul/cart.html
@@ -67,7 +67,7 @@
                                                     </div>
                                                 </div>
                                                 <div class="col-md-4 quantity">
-                                                    <form class= 'form pull-right' method='POST' action="{% url 'add_to_cart' item.product.slug %}">
+                                                    <form class= 'form pull-right' method='POST' action="{% url 'update_cart' item.product.slug %}">
                                                         {% csrf_token %}
                                                         <input name='qty' class= "quantityPlace" type='number' min="0" placeholder={{item.quantity}} value='{{item.quantity}}' />
                                                        {% if item.variation.colors %}
@@ -84,7 +84,7 @@
                                                         {% endif %}
 
 
-                                                        <input type='submit' value='update cart' />
+                                                        <input type='submit' value='update cart'/>
                                                         <a href="{% url 'remove_from_cart' item.id %}"><img src="{%static 'Raul/Icons/Icons_Small/baseline_delete_outline_white_18dp.png' %}"></a>
                                                     </form>
 
