--- a/Raul/templates/Raul/categories.html
+++ b/Raul/templates/Raul/categories.html
@@ -29,8 +29,7 @@
 
     <div class="row" id="scrollHere">
         {% for product in cat_products %}
-        <form method='POST' action="{% url 'ajax_add_to_cart' product.slug %}">
-            {% csrf_token %}
+
 
             <input type="hidden" name='qty' type='number' placeholder='Quantity' class = "numberOfItems" min="1" max="50" value="1">
 
@@ -41,7 +40,12 @@
                 </a>
                 <div class="overlay">
                     <div class="actions">
-                        <input type='submit' value='Add to cart' onclick="cartNotification()">
+                        <form method='POST' action="{% url 'ajax_add_to_cart' product.slug %}">
+                            {% csrf_token %}
+                            <input type="hidden" name='qty' type='number' placeholder='Quantity' class = "numberOfItems" min="1" max="50" value="1">
+                            <input type='submit' value='Add to cart' onclick="cartNotification()">
+                            </form>
+
                     </div>
                 </div>
             </div>
