--- a/Raul/templates/Raul/single_product.html
+++ b/Raul/templates/Raul/single_product.html
@@ -10,14 +10,6 @@
             width: 100%;
             margin: 0;
             font-family: 'Roboto', sans-serif;
-            hi
-        }
-
-        a{
-            
-        background: -webkit-linear-gradient(#f8f18e,#d6a55b);
-        -webkit-background-clip: text;
-        -webkit-text-fill-color: transparent;
         }
 
         .containers1{
@@ -48,15 +40,21 @@
             padding:50px;
         }
 
+        .product-description a{
+            text-decoration: none;
+            background: -webkit-linear-gradient(#f8f18e,#d6a55b);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+        }
+
         .product-description span {
             font-size: 12px;
             letter-spacing: 1px;
             text-transform: uppercase;
             text-decoration: none;
-            
-	background: -webkit-linear-gradient(#f8f18e,#d6a55b);
-	-webkit-background-clip: text;
-	-webkit-text-fill-color: transparent;
+            background: -webkit-linear-gradient(#f8f18e,#d6a55b);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
         }
 
         .product-description h1 {
@@ -183,8 +181,8 @@
         .cartAdded{
             font-size: 25px;
             background: -webkit-linear-gradient(#f8f18e,#d6a55b);
-	-webkit-background-clip: text;
-	-webkit-text-fill-color: transparent;
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
             font-weight: 500;
         }
 
