--- a/Raul/templates/Raul/home.html
+++ b/Raul/templates/Raul/home.html
@@ -136,23 +136,23 @@
 
         <div class="category" id="hideOnScroll">
 
-            <p id="categoryP"><a style="color: white" href="{% url 'sec-view' 'New Arrivals' %}">New Arrivals</a></p>
+            <p id="categoryP"><a  href="{% url 'sec-view' 'New Arrivals' %}">New Arrivals</a></p>
 
-            <p id="categoryP"><a style="color: white" href="{% url 'sec-view' 'Decorative Accessories' %}">Decorative Accessories</a></p>
+            <p id="categoryP"><a  href="{% url 'sec-view' 'Decorative Accessories' %}">Decorative Accessories</a></p>
             
-            <p id="categoryP"><a style="color: white" href="{% url 'sec-view' 'Tabletop' %}">Tabletop</a></p>
+            <p id="categoryP"><a  href="{% url 'sec-view' 'Tabletop' %}">Tabletop</a></p>
 
-            <p id="categoryP"><a style="color: white" href="{% url 'sec-view' 'Furniture' %}">Furniture</a></p>
+            <p id="categoryP"><a  href="{% url 'sec-view' 'Furniture' %}">Furniture</a></p>
 
-            <p id="categoryP"><a style="color: white" href="{% url 'sec-view' 'Floral' %}">Floral</a></p>
+            <p id="categoryP"><a  href="{% url 'sec-view' 'Floral' %}">Floral</a></p>
 
-            <p id="categoryP"><a style="color: white" href="{% url 'sec-view' 'Wall Art' %}">Wall Art</a></p>
+            <p id="categoryP"><a  href="{% url 'sec-view' 'Wall Art' %}">Wall Art</a></p>
 
-            <p id="categoryP"><a style="color: white" href="{% url 'Raul-product' %}">All Products</a></p>
+            <p id="categoryP"><a  href="{% url 'Raul-product' %}">All Products</a></p>
 
-            <p id="categoryP"><a style="color: white" href="{% url 'sec-view' 'Sale' %}">Sale</a></p>
+            <p id="categoryP"><a  href="{% url 'sec-view' 'Sale' %}">Sale</a></p>
             
-            <p id="categoryP" style="color:white;">Venue Bookings</p>
+            <p id="categoryP"> Venue Bookings</p>
 
         </div>
 
@@ -218,7 +218,6 @@
         {% endfor %}
         {% endif %}
     </div>
-
 
 
     <div class ="bannerHead" id = "mainBanner">
@@ -334,15 +333,12 @@
     </div>
 
     <div class="filler" id ="borderBottom"></div>
- 
-
+    <div class="filler"></div>
 
     <div class="horizontalScroll" id="shop">
         <div class ="featureProductsHeading" >
-
             featured products
         </div>
-        <div class="filler"></div>
         <div class="marquee">
             <ul class="marqueeContent">
                 <li>
@@ -363,7 +359,7 @@
                 </li>
                 <li>
                     <div class = "container" data-aos="fade-in">
-                        <img src="{%static 'Raul/Images/small.jpg'%}" draggable="false" alt="Furniture Photo" class="imageAvatar">
+                        <img src="{%static 'Raul/Images/Test2.png'%}" draggable="false" alt="Furniture Photo" class="imageAvatar">
                         <div class = "text">
                             <div class = "textInfo"> DINNERWARE </div>
                         </div>
@@ -371,7 +367,7 @@
                 </li>
                 <li>
                     <div class = "container" data-aos="fade-in">
-                        <img src="{%static 'Raul/Images/small2.jpg'%}" draggable="false" alt="Furniture Photo" class="imageAvatar">
+                        <img src="{%static 'Raul/Images/Test3.png'%}" draggable="false" alt="Furniture Photo" class="imageAvatar">
                         <div class = "text">
                             <div class = "textInfo"> FLORAL ARRANGEMENTS </div>
                         </div>
@@ -379,7 +375,7 @@
                 </li>
                 <li>
                     <div class = "container" data-aos="fade-in">
-                        <img src="{% static 'Raul/Images/small3.jpg' %}" draggable="false" alt="Furniture Photo" class="imageAvatar">
+                        <img src="{% static 'Raul/Images/test_pic.png' %}" draggable="false" alt="Furniture Photo" class="imageAvatar">
                         <div class = "text">
                             <div class = "textInfo"> DINNERWARE </div>
                         </div>
@@ -387,7 +383,7 @@
                 </li>
                 <li>
                     <div class = "container" data-aos="fade-in">
-                        <img src="{% static 'Raul/Images/small.jpg' %}" draggable="false" alt="Furniture Photo" class="imageAvatar">
+                        <img src="{% static 'Raul/Images/Test.png' %}" draggable="false" alt="Furniture Photo" class="imageAvatar">
                         <div class = "text">
                             <div class = "textInfo"> WALL ART </div>
                         </div>
@@ -395,7 +391,7 @@
                 </li>
                 <li>
                     <div class = "container" data-aos="fade-in">
-                        <img src="{% static 'Raul/Images/small.jpg' %}" draggable="false" alt="Furniture Photo" class="imageAvatar">
+                        <img src="{% static 'Raul/Images/LexiPotSmall_25c065c4-8d9b-4760-8570-7c1bfd73b597_2048x-removebg-preview.png' %}" draggable="false" alt="Furniture Photo" class="imageAvatar">
                         <div class = "text">
                             <div class = "textInfo"> chandelier </div>
                         </div>
@@ -403,7 +399,7 @@
                 </li>
                 <li>
                     <div class = "container" data-aos="fade-in">
-                        <img src="{% static 'Raul/Images/small2.jpg' %}" draggable="false" alt="Furniture Photo" class="imageAvatar">
+                        <img src="{% static 'Raul/Images/Test.png' %}" draggable="false" alt="Furniture Photo" class="imageAvatar">
                         <div class = "text">
                             <div class = "textInfo"> WAll ART </div>
                         </div>
@@ -412,7 +408,7 @@
 
                 <li>
                     <div class = "container" data-aos="fade-in">
-                        <img src="{% static 'Raul/Images/small3.jpg' %}" draggable="false" alt="Furniture Photo" class="imageAvatar">
+                        <img src="{% static 'Raul/Images/Test2.png' %}" draggable="false" alt="Furniture Photo" class="imageAvatar">
                         <div class = "text">
                             <div class = "textInfo"> dinnerware </div>
                         </div>
@@ -422,7 +418,7 @@
             </ul>
         </div>
     </div>
-    <div class="filler"></div>
+
     <div class="filler" id ="borderBottom"></div>
 
     <div class ="shopBanner">
