--- a/Raul/templates/Raul/product.html
+++ b/Raul/templates/Raul/product.html
@@ -20,9 +20,10 @@
     <div class="productBanner-heading">
         <p>Products</p>
     </div>
-    <div class="arrowDown">
+    <hr>
+    <!-- <div class="arrowDown">
         <a href="#scrollHere"><img src="{%static 'Raul/Images/arrowDown.png' %}" width="3%"></a>
-    </div>
+    </div> -->
 </div>
 
 <div class="productContainer">
@@ -36,7 +37,7 @@
                     </a>
                     <div class="overlay">
                         <div class="actions">
-                            <p>Add to Cart</p>
+                            <p onclick="cartNotification()">Add to Cart</p>
                         </div>
                         
                     </div>
@@ -48,6 +49,11 @@
     </div>
 
 </div>
+<div class ="cartNotification" id = "cartPopUp">
+    <div class = "cartAdded">
+        Added to your cart. 
+    </div>
+</div>
 
 <button onclick="topFunction()" id="scrollTop"> <img src="{% static 'Raul/Images/arrowDown.png' %}"> </button>
 
@@ -57,6 +63,11 @@
 <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
 <script>
     AOS.init();
+</script>
+<script>
+    function cartNotification(){
+        document.getElementById('cartPopUp').style.animation = "fadeInPop 2.5s";
+    }
 </script>
 </body>
 
